# Qt-CMake-HelloWorld

./: CMakeLists.txt  hello.pro  main.cpp  mainwindow.cpp
